--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LovedOnes"
         tools:targetApi="31">
-
+        <activity
+            android:name=".safetytips"
+            android:exported="false" />
         <activity
             android:name=".EmergencyNumbers"
             android:exported="false"
